--- a/views/selection.handlebars
+++ b/views/selection.handlebars
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Splash Page</title>	
+	<title>Selection Page</title>	
 	<meta charset="utf-8">
 	<!-- INSERT VIEWPORT META TAG FOR MOBILE DEVICES -->
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -12,8 +12,10 @@
 </head>
 
 <body>
-	<h1>Welcome</h1>
-	<a href="./group">Group</a>
+	<h1>Selection</h1>
+	<a href="./results">Results</a>
+	<a href="./group">Back to Group</a>
+
 
 	<!-- SCRIPTS -->
 	<script src="/js/jquery-3.1.1.min.js"></script>
