--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -8,7 +8,7 @@
 	<link href="/css/bootstrap-flex.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-grid.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-reboot.min.css" rel="stylesheet">
-	<link href="/css/main.css" rel="stylesheet">    
+	<link href="/css/group.css" rel="stylesheet">    
 </head>
 
 <body>
@@ -20,6 +20,6 @@
 	<script src="/js/jquery-3.1.1.min.js"></script>
 	<script src="/js/tether.min.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
-	<script src="/js/main.js"></script>
+	<script src="/js/group.js"></script>
 </body>
 </html>
