--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -3,11 +3,13 @@
 <head>
 	<title>Group Page</title>	
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- INSERT VIEWPORT META TAG FOR MOBILE DEVICES -->
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-flex.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-grid.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-reboot.min.css" rel="stylesheet">
+	<link href="/css/main.css" rel="stylesheet"> 
 	<link href="/css/group.css" rel="stylesheet">    
 </head>
 
