--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,17 +3,21 @@
 <head>
 	<title>Splash Page</title>	
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- INSERT VIEWPORT META TAG FOR MOBILE DEVICES -->
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-flex.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-grid.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-reboot.min.css" rel="stylesheet">
+	<link href="/css/main.css" rel="stylesheet"> 
 	<link href="/css/index.css" rel="stylesheet">    
 </head>
 
 <body>
-	<h1>Welcome</h1>
-	<a href="./group">Group</a>
+	<div class="container">
+		<h1>Welcome</h1>
+		<a href="./group">Group</a>
+	</div>
 
 	<!-- SCRIPTS -->
 	<script src="/js/jquery-3.1.1.min.js"></script>
