--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -3,11 +3,12 @@
 <head>
 	<title>Results Page</title>	
 	<meta charset="utf-8">
-	<!-- INSERT VIEWPORT META TAG FOR MOBILE DEVICES -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-flex.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-grid.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-reboot.min.css" rel="stylesheet">
+	<link href="/css/main.css" rel="stylesheet"> 
 	<link href="/css/results.css" rel="stylesheet">    
 </head>
 
