--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,23 +1,23 @@
+/*
+COLORS:
+#615195 PURPLE
+#DE7684 ORANGE
+#9085B5 FADED PURPLE
+#E89FA9 FADED ORANGE
+#F7F7F7 FADED GREY
+#636363 MIDDLE GREY
+*/
+
 html, body {
-	width: 100vh;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 }
 
 .gradient-bg {
 	width: 100%;
 	height: 100%;
-	background: url('../images/overlay.png');
-}
-
-.gradient-bg:before {
-    content: '';
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	background-image: linear-gradient(to bottom left,#615195,#DE7684);
-	opacity: .7; 
+	background-image: url('../images/overlay.png'), linear-gradient(to bottom left,#9085B5,#E89FA9);
+	background-attachment: fixed;
 }
 
 .main-container {
