--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -3,20 +3,21 @@
 <head>
 	<title>Group Page</title>	
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- INSERT VIEWPORT META TAG FOR MOBILE DEVICES -->
+	<!-- LIBRARIES -->
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-flex.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-grid.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-reboot.min.css" rel="stylesheet">
+	<!-- STYLESHEETS -->
 	<link href="/css/main.css" rel="stylesheet"> 
-	<link href="/css/group.css" rel="stylesheet">    
+	<link href="/css/group.css" rel="stylesheet"> 
 </head>
 
-<body>
-	<h1>Group</h1>
-	<a href="./selection">Selection</a>
-
+<body class="gradient-bg">
+	<div class="container main-container">
+		<h1>Group</h1>
+		<a href="./selection">Selection</a>
+	</div>
 
 	<!-- SCRIPTS -->
 	<script src="/js/jquery-3.1.1.min.js"></script>
