--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,18 +3,18 @@
 <head>
 	<title>Splash Page</title>	
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- INSERT VIEWPORT META TAG FOR MOBILE DEVICES -->
+	<!-- LIBRARIES -->
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-flex.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-grid.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-reboot.min.css" rel="stylesheet">
+	<!-- STYLESHEETS -->
 	<link href="/css/main.css" rel="stylesheet"> 
-	<link href="/css/index.css" rel="stylesheet">    
+	<link href="/css/index.css" rel="stylesheet">
 </head>
 
-<body>
-	<div class="container">
+<body class="gradient-bg">
+	<div class="container main-container">
 		<h1>Welcome</h1>
 		<a href="./group">Group</a>
 	</div>
