--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -3,19 +3,21 @@
 <head>
 	<title>Results Page</title>	
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- LIBRARIES -->
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-flex.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-grid.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-reboot.min.css" rel="stylesheet">
+	<!-- STYLESHEETS --> 
 	<link href="/css/main.css" rel="stylesheet"> 
 	<link href="/css/results.css" rel="stylesheet">    
 </head>
 
-<body>
-	<h1>Results</h1>
-	<a href="./">Back to Start</a>
-
+<body class="gradient-bg">
+	<div class="container main-container">
+		<h1>Results</h1>
+		<a href="./">Back to Start</a>
+	</div>
 
 	<!-- SCRIPTS -->
 	<script src="/js/jquery-3.1.1.min.js"></script>
