--- a/views/selection.handlebars
+++ b/views/selection.handlebars
@@ -75,7 +75,7 @@
 
 		<div class="row">
 			<div class="col-sm-12 text-xs-center">
-				<a href="./results"><button type="button" class="btn btn-primary btn-block btn-submit">Submit</button></a>
+				<a href="./results"><button type="button" class="btn btn-lg btn-primary btn-block btn-submit">Submit</button></a>
 			</div>
 		</div>
 	</div>
