--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Splash Page</title>	
+	<title>Splash Page</title>
 	<meta charset="utf-8">
 	<!-- LIBRARIES -->
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -9,14 +9,26 @@
 	<link href="/css/bootstrap-grid.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-reboot.min.css" rel="stylesheet">
 	<!-- STYLESHEETS -->
-	<link href="/css/main.css" rel="stylesheet"> 
+	<link href="/css/main.css" rel="stylesheet">
 	<link href="/css/index.css" rel="stylesheet">
 </head>
 
-<body class="gradient-bg">
+<body align="center" class="gradient-bg">
 	<div class="container main-container">
-		<h1>Welcome</h1>
-		<a href="./group">Group</a>
+        <div class="row header">
+			<div class="col-sm">
+				<h1 class="display-4">Welcome to</h1>
+                <h1 class="display-4">[Placeholder]</h1>
+			</div>
+		</div>
+
+        <h2>[Placeholder] helps you decide what food your group wants to eat!</h2>
+
+        <div class="row">
+			<div class="col-sm-12 text-xs-center">
+				<a href="./group"><button type="button" class="btn btn-lg btn-primary btn-block btn-submit">Click here to start!</button></a>
+			</div>
+		</div>
 	</div>
 
 	<!-- SCRIPTS -->
