--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,22 +11,24 @@
 	<!-- STYLESHEETS -->
 	<link href="/css/main.css" rel="stylesheet">
 	<link href="/css/index.css" rel="stylesheet">
+	<!--FONTS-->
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 </head>
 
-<body align="center" class="gradient-bg">
+<body align="center" class="splash-bg">
 	<div class="container main-container">
         <div class="row header">
 			<div class="col-sm">
-				<h1 class="display-4">Welcome to</h1>
-                <h1 class="display-4">[Placeholder]</h1>
+				<h1 class="display-4">Welcome to [Placeholder]</h1>
 			</div>
 		</div>
 
-        <h2>[Placeholder] helps you decide what food your group wants to eat!</h2>
+        <h3>[Placeholder] helps you decide what food your group wants to eat!</h3>
+        <h3>continued description here...</h3>
 
         <div class="row">
 			<div class="col-sm-12 text-xs-center">
-				<a href="./group"><button type="button" class="btn btn-lg btn-primary btn-block btn-submit">Click here to start!</button></a>
+				<a href="./group"><button type="button" class="btn btn-lg btn-primary btn-submit">Click here to start!</button></a>
 			</div>
 		</div>
 	</div>
