--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,6 +20,13 @@ html, body {
 	background-attachment: fixed;
 }
 
+.splash-bg {
+	/*background-image: linear-gradient(rgba(50,50,50,0.7),rgba(50,50,50,0.7)), url('../images/splash0.jpg');*/
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+}
+
 .main-container {
 	background-color: white;
 	border-radius: 5px;
