--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -15,7 +15,7 @@
 
 <body class="gradient-bg">
 	<div class="container main-container">
-		<h1>Group</h1>
+		<h1>Group [Skeleton]</h1>
 		<a href="./selection">Selection</a>
 	</div>
 
