--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -15,7 +15,7 @@
 
 <body class="gradient-bg">
 	<div class="container main-container">
-		<h1>Results</h1>
+		<h1>Results + Planner [Skeleton]</h1>
 		<a href="./">Back to Start</a>
 	</div>
 
