--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -3,6 +3,7 @@
 <head>
 	<title>Group Page</title>	
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- LIBRARIES -->
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-flex.min.css" rel="stylesheet">
