--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,6 +13,7 @@ html, body {
 	height: 100%;
 }
 
+/*BACKGROUNDS*/
 .gradient-bg {
 	width: 100%;
 	height: 100%;
@@ -21,19 +22,51 @@ html, body {
 }
 
 .splash-bg {
-	/*background-image: linear-gradient(rgba(50,50,50,0.7),rgba(50,50,50,0.7)), url('../images/splash0.jpg');*/
+	background-image: linear-gradient(rgba(50,50,50,0.7),rgba(50,50,50,0.7)), url('../images/splash0.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
+	width: 100%;
+	height: 100%;
 }
 
+/*CONTAINERS*/
 .main-container {
 	background-color: white;
 	border-radius: 5px;
-	overflow: hidden;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	width: 90%;
 	max-width: 800px;
+	overflow: hidden;
+}
+
+.header {
+	background-color: #F7F7F7;
+	color: #636363;
+	padding-top: 20px;
+	padding-bottom: 20px;
+}
+
+/*TEXT STYLING*/
+h3 {
+	font-family: 'Open Sans Condensed', sans-serif;
+	margin: 20px;
+	color: #636363;
+	opacity: .5;
+}
+
+/*BUTTONS*/
+.btn-submit {
+	margin-top: 15px;
+	margin-bottom: 15px;
+	background-color: #DE7684;
+	border: 1px solid #DE7684;
+}
+
+.btn-submit:hover {
+	background-color: #615195;
+	border: 1px solid #615195;
 }
