--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,6 +3,7 @@
 <head>
 	<title>Splash Page</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- LIBRARIES -->
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-flex.min.css" rel="stylesheet">
@@ -15,7 +16,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 </head>
 
-<body align="center" class="splash-bg">
+<body align="center" class="splash-bg gradient-bg">
 	<div class="container main-container">
         <div class="row header">
 			<div class="col-sm">
