--- a/views/selection.handlebars
+++ b/views/selection.handlebars
@@ -3,6 +3,7 @@
 <head>
 	<title>Selection Page</title>	
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<!-- LIBRARIES -->
 	<link href="/css/bootstrap.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-flex.min.css" rel="stylesheet">
