--- a/public/css/main.css
+++ b/public/css/main.css
@@ -32,15 +32,21 @@ html, body {
 
 /*CONTAINERS*/
 .main-container {
+	overflow: hidden;
 	background-color: white;
 	border-radius: 5px;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
 	width: 90%;
 	max-width: 800px;
-	overflow: hidden;
+}
+
+/*MEDIA QUERY FOR DESKTOP*/
+@media (min-width: 768px) {
+	.main-container {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
 }
 
 .header {
