--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -15,9 +15,13 @@
 </head>
 
 <body class="gradient-bg">
+	<div class="container spacer">
+	</div>
 	<div class="container main-container">
 		<h1>Group [Skeleton]</h1>
 		<a href="./selection">Selection</a>
+	</div>
+	<div class="container spacer">
 	</div>
 
 	<!-- SCRIPTS -->
