--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,7 +20,7 @@
 	<div class="container main-container">
         <div class="row header">
 			<div class="col-sm">
-				<h1 class="display-4">Welcome to [Placeholder]</h1>
+				<h1>Welcome to [Placeholder]</h1>
 			</div>
 		</div>
 
