--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -15,9 +15,13 @@
 </head>
 
 <body class="gradient-bg">
+	<div class="container spacer">
+	</div>
 	<div class="container main-container">
 		<h1>Results + Planner [Skeleton]</h1>
 		<a href="./">Back to Start</a>
+	</div>
+	<div class="container spacer">
 	</div>
 
 	<!-- SCRIPTS -->
