--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -29,7 +29,7 @@
 
         <div class="row">
 			<div class="col-sm-12 text-xs-center">
-				<a href="./group"><button type="button" class="btn btn-lg btn-primary btn-submit">Click here to start!</button></a>
+				<a href="./group"><button type="button" class="btn btn-lg btn-primary btn-color btn-submit">Click here to start!</button></a>
 			</div>
 		</div>
 	</div>
