--- a/views/selection.handlebars
+++ b/views/selection.handlebars
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Selection Page</title>	
+	<title>Title</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<!-- LIBRARIES -->
@@ -21,31 +21,36 @@
 	</div>
 	<div class="container main-container">
 		<div class="row header">
-			<div class="col-sm-9">
+			<div class="col-sm-8">
 				<h1>Selection</h1>
 			</div>
-			<div class="col-sm-3 text-xs-right">
-				<a href="./group"><button type="button" class="btn btn-block btn-secondary">Back</button></a>
+			<div class="col-sm-4 text-xs-right">
+				<a href="./group"><button type="button" class="btn btn-block btn-secondary">Back to Group</button></a>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="col-sm-8 text-xs-center">
+				
+				<!-- SEARCH BAR -->
 				<h3>What kind of food would you like to eat?</h3>
-				<div class="form-group">
-					<div class="input-group">
-						<input class="form-control" type="search" placeholder="Search restaurants...">
-						<div class="input-group-addon">Search</div>
-					</div>
+				<div class="input-group">
+					<input type="text" class="form-control" placeholder="Search restaurants...">
+					<button type="button" class="btn btn-primary btn-color">Search</button>
 				</div>
-				<div class="form-group">
-					<label for="select-cuisine">Cuisine Type:</label>
-					<select class="form-control" id="select-cuisine">
-						{{#each select-cuisine}}
-						<option>{{this}}</option>
-						{{/each}}
-					</select>
+
+				<!--TOGGLE GROUP -->
+				<p>What are you feeling? Select Cuisine(s):</p>
+				<div class="btn-group" data-toggle="buttons">
+					{{#each select-cuisine}}
+					<label class="btn btn-secondary btn-toggle">
+						<input type="checkbox" name="toggle" value={{@:index}}>
+						{{this}}
+					</label>
+					{{/each}}
 				</div>
+
+				<!-- FORM GROUPS -->
 				<div class="form-group">
 					<label for="select-price">Price Range:</label>
 					<select class="form-control" id="select-price">
@@ -54,6 +59,7 @@
 						{{/each}}
 					</select>
 				</div>
+
 				<div class="form-group">
 					<label for="select-distance">Distance:</label>
 					<select class="form-control" id="select-distance">
@@ -64,18 +70,25 @@
 				</div>
 			</div>
 
+			<!-- SIDEBAR - USERS -->
 			<div class="col-sm-4 text-xs-center">
 				<h3>Users</h3>
 				<ul class="list-group">
+					<li class="list-group-item">You (Name)
+					<span class="tag tag-default float-xs-right">Choosing...</span>
+					</li>
 					{{#each users}}
-					<li class="list-group-item">{{this.name}}</li>
+					<li class="list-group-item">{{this.name}}
+					<span class="tag tag-default float-xs-right">{{this.status}}</span>
+					</li>
 					{{/each}}
 			</div>
 		</div>
 
+		<!-- SUBMIT BUTTON -->
 		<div class="row">
 			<div class="col-sm-12 text-xs-center">
-				<a href="./results"><button type="button" class="btn btn-lg btn-primary btn-block btn-submit">Submit</button></a>
+				<a href="./results"><button type="button" class="btn btn-lg btn-primary btn-block btn-submit btn-color">Submit</button></a>
 			</div>
 		</div>
 	</div>
