--- a/views/selection.handlebars
+++ b/views/selection.handlebars
@@ -75,7 +75,7 @@
 				<h3>Users</h3>
 				<ul class="list-group">
 					<li class="list-group-item">You (Name)
-					<span class="tag tag-default float-xs-right">Choosing...</span>
+					<span class="tag tag-default float-xs-right">Choosing</span>
 					</li>
 					{{#each users}}
 					<li class="list-group-item">{{this.name}}
