some layout done

--- a/views/selection.handlebars
+++ b/views/selection.handlebars
@@ -24,7 +24,7 @@
 			<div class="col-sm-8">
 				<h1>Selection</h1>
 			</div>
-			<div class="col-sm-4 text-xs-right">
+			<div class="col-sm-4">
 				<a href="./group"><button type="button" class="btn btn-block btn-secondary">Back to Group</button></a>
 			</div>
 		</div>
