--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -18,8 +18,10 @@
 	<div class="container spacer">
 	</div>
 	<div class="container main-container">
-		<h1>Group [Skeleton]</h1>
-		<a href="./selection">Selection</a>
+		<div class="row header">
+			<h1>Group [Skeleton]</h1>
+			<a href="./selection">Selection</a>
+		</div>
 	</div>
 	<div class="container spacer">
 	</div>
