--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -18,8 +18,16 @@
 	<div class="container spacer">
 	</div>
 	<div class="container main-container">
-		<h1>Results + Planner [Skeleton]</h1>
-		<a href="./">Back to Start</a>
+		<!-- HEADER -->
+		<div class="row header">
+			<div class="col-sm-8">
+				<h1>Results + Planner [Skeleton]</h1>
+			</div>
+			<div class="col-sm-4">
+				<a href="./"><button class="btn btn-secondary btn-block">Back to Start</button></a>
+			</div>
+		</div>
+
 	</div>
 	<div class="container spacer">
 	</div>
