updated group page

--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -17,15 +17,30 @@
 <body class="gradient-bg">
 	<div class="container spacer">
 	</div>
-
 	<div class="container main-container">
-		<h1>Group [Skeleton]</h1>
+
+		<!-- HEADER -->
+		<div class="row header">
+			<div class="col-sm-8">
+				<h1>Share Link with Friends!</h1>
+			</div>
+			<div class="col-sm-4">
+				<a href="./"><button type="button" class="btn btn-block btn-secondary">Back to Home Page</button></a>
+			</div>
+		</div>
+		
+		<!-- COPY LINK -->
 		<div class="form-inline" id="flexbox">
 			<input id="search" type="text" value="hello">
     		<button aria-label="Copied!" class="btn" type="button" data-clipboard-action="copy" data-clipboard-target="#search" ><img src="/assets/clippy.svg" alt="Copy to clipboard" width="13"></button>
 		</div>
-		<br>
-		<a href="./selection">Selection</a>
+		
+		<!-- SUBMIT BUTTON -->
+		<div class="row">
+			<div class="col-sm-12 text-xs-center">
+				<a href="./selection"><button type="button" class="btn btn-lg btn-primary btn-block btn-submit btn-color">Click here when you are ready</button></a>
+			</div>
+		</div>
 	</div>
 	
 	<div class="container spacer">
