--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<title>Results Page</title>	
+	<title>Results Page</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- LIBRARIES -->
@@ -9,9 +9,11 @@
 	<link href="/css/bootstrap-flex.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-grid.min.css" rel="stylesheet">
 	<link href="/css/bootstrap-reboot.min.css" rel="stylesheet">
-	<!-- STYLESHEETS --> 
-	<link href="/css/main.css" rel="stylesheet"> 
-	<link href="/css/results.css" rel="stylesheet">    
+	<!-- STYLESHEETS -->
+	<link href="/css/main.css" rel="stylesheet">
+	<link href="/css/results.css" rel="stylesheet">
+    <!--FONTS-->
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet">
 </head>
 
 <body class="gradient-bg">
@@ -21,13 +23,48 @@
 		<!-- HEADER -->
 		<div class="row header">
 			<div class="col-sm-8">
-				<h1>Results + Planner [Skeleton]</h1>
+				<h1>Results</h1>
 			</div>
 			<div class="col-sm-4">
 				<a href="./"><button class="btn btn-secondary btn-block">Back to Start</button></a>
 			</div>
 		</div>
-
+        <!-- SHOWS PREFERENCES -->
+        <div class="row">
+            <h3>Here are your group's top 3 preferences:</h3>
+        </div>
+        <div class="row">
+            <div class="col-sm-4 text-xs-center">
+                <p>[FOOD]</p>
+            </div>
+            <div class="col-sm-4 text-xs-center">
+                <p>[FOOD]</p>
+            </div>
+            <div class="col-sm-4 text-xs-center">
+                <p>[FOOD]</p>
+            </div>
+        </div>
+        <!-- SHOWS RESULTS -->
+        <div class="col-sm-8">
+            <div class="row">
+                <p>yelp result #1</p>
+            </div>
+            <div class="row">
+                <p>yelp result #2</p>
+            </div>
+            <div class="row">
+                <p>yelp result #3</p>
+            </div>
+            <div class="row">
+                <p>yelp result #4</p>
+            </div>
+            <div class="row">
+                <p>yelp result #5</p>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <p>google map</p>
+        </div>
 	</div>
 	<div class="container spacer">
 	</div>
