--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -48,22 +48,28 @@
         <div class="col-sm-8">
             <div class="row">
                 <p>yelp result #1</p>
+                <!-- INSERT YELP RESULT HERE -->
             </div>
             <div class="row">
                 <p>yelp result #2</p>
+                <!-- INSERT YELP RESULT HERE -->
             </div>
             <div class="row">
                 <p>yelp result #3</p>
+                <!-- INSERT YELP RESULT HERE -->
             </div>
             <div class="row">
                 <p>yelp result #4</p>
+                <!-- INSERT YELP RESULT HERE -->
             </div>
             <div class="row">
                 <p>yelp result #5</p>
+                <!-- INSERT YELP RESULT HERE -->
             </div>
         </div>
         <div class="col-sm-4">
             <p>google map</p>
+            <!-- INSERT GOOGLE MAP HERE -->
         </div>
 	</div>
 	<div class="container spacer">
