--- a/public/css/results.css
+++ b/public/css/results.css
@@ -1,3 +1,11 @@
 body {
 	background-color: beige;
 }
+
+/*TEXT STYLING*/
+h4 {
+	font-family: 'Open Sans Condensed', sans-serif;
+	color: #636363;
+	opacity: .7;
+    padding-left: 7px;
+}
