--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -47,6 +47,9 @@
         <!-- SHOWS RESULTS -->
         <div class="col-sm-8">
             <div class="row">
+                <h4>Yelp Results:</h4>
+            </div>
+            <div class="row">
                 <p>yelp result #1</p>
                 <!-- INSERT YELP RESULT HERE -->
             </div>
@@ -68,6 +71,9 @@
             </div>
         </div>
         <div class="col-sm-4">
+            <div class="row">
+                <h4>Google Maps:</h4>
+            </div>
             <p>google map</p>
             <!-- INSERT GOOGLE MAP HERE -->
         </div>
@@ -80,5 +86,10 @@
 	<script src="/js/tether.min.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/results.js"></script>
+
+    <!-- GOOGLE MAP API SCRIPT -->
+    <script type="text/javascript"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABZaEhz5AnijS8IZ8mYWYq-tQJ1dMTNxk&libraries=initMap,places">
+    </script>
 </body>
 </html>
