added fake JSON data functionality

--- a/views/group.handlebars
+++ b/views/group.handlebars
@@ -50,7 +50,7 @@
 
 		<!-- COPY LINK -->
 		<div class="form-inline" id="flexbox">
-			<input id="search" type="text" value="hello">
+			<input id="search" type="text" value="{{randomurl}}">
     		<button aria-label="Copied!" class="btn" type="button" data-clipboard-action="copy" data-clipboard-target="#search" ><img src="/assets/clippy.svg" alt="Copy to clipboard" width="13"></button>
 		</div>
 		
@@ -58,7 +58,7 @@
 		<div class="row">
 		<h3>Share with your friends!</h3>
 		<br>
-		<div class="fb-send" data-href="http://www.google.com"></div>
+		<div class="fb-send" data-href="{{randomurl}}"></div>
 		</div>
 
 		<!-- SUBMIT BUTTON -->
