--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -76,7 +76,48 @@
             </div>
             <div id="map"></div>
             <script>
-                initMap();
+                // Note: This example requires that you consent to location sharing when
+                // prompted by your browser. If you see the error "The Geolocation service
+                // failed.", it means you probably did not give permission for the browser to
+                // locate you.
+
+                function initMap() {
+                    var default_loc = {lat: 32.8800649, lng: -117.2362022};
+                    var map = new google.maps.Map(document.getElementById('map'), {
+                        center: default_loc,
+                        zoom: 12
+                    });
+                    var infoWindow = new google.maps.InfoWindow({map: map});
+
+                    // Try HTML5 geolocation.
+                    if (navigator.geolocation) {
+                        navigator.geolocation.getCurrentPosition(function(position) {
+                            var pos = {
+                                lat: position.coords.latitude,
+                                lng: position.coords.longitude
+                            };
+
+                            infoWindow.setPosition(pos);
+                            infoWindow.setContent('Location found.');
+                            map.setCenter(pos);
+                        }, function() {
+                            handleLocationError(true, infoWindow, map.getCenter());
+                        });
+                    }
+
+                    else {
+                        // Browser doesn't support Geolocation
+                        handleLocationError(false, infoWindow, map.getCenter());
+                    }
+                }
+
+                function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+                    infoWindow.setPosition(pos);
+                    infoWindow.setContent(browserHasGeolocation ?
+                        'Error: The Geolocation service failed.' :
+                        'Error: Your browser doesn\'t support geolocation.');
+                }
+                </script>
             </script>
             <div class="row spacer"></div>
         </div>
@@ -84,12 +125,13 @@
 	<div class="container spacer">
 	</div>
 
+    <!-- GOOGLE MAP API SCRIPT -->
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABZaEhz5AnijS8IZ8mYWYq-tQJ1dMTNxk&callback=initMap" type="text/javascript"></script>
+
 	<!-- SCRIPTS -->
 	<script src="/js/jquery-3.1.1.min.js"></script>
 	<script src="/js/tether.min.js"></script>
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/results.js"></script>
-    <!-- GOOGLE MAP API SCRIPT -->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABZaEhz5AnijS8IZ8mYWYq-tQJ1dMTNxk&callback=initMap" type="text/javascript"></script>
-</body>
+    </body>
 </html>
