--- a/public/css/main.css
+++ b/public/css/main.css
@@ -77,9 +77,14 @@ h3 {
 	outline: none !important;
 }
 
-.btn-color:hover, .btn-color:focus {
+.btn-color:hover {
 	background-color: #615195 !important;
 	border: 1px solid #615195 !important;
+}
+
+.btn-color:focus {
+	background-color: #E89FA9 !important;
+	border: 1px solid #E89FA9 !important;
 }
 	
 .btn-color:active {
