--- a/public/css/results.css
+++ b/public/css/results.css
@@ -10,8 +10,17 @@ h4 {
     padding-left: 7px;
 }
 
-#map {
+/*#map {
     height: 500px;
     width: 100%;
     background-color: grey;
+}*/
+
+#map_wrapper {
+    height: 400px;
+}
+
+#map_canvas {
+    width: 100%;
+    height: 100%;
 }
