--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -74,73 +74,9 @@
             <div class="row">
                 <h4>Google Maps:</h4>
             </div>
-            <div id="map"></div>
-            <script>
-                // Note: This example requires that you consent to location sharing when
-                // prompted by your browser. If you see the error "The Geolocation service
-                // failed.", it means you probably did not give permission for the browser to
-                // locate you.
-
-                function initMap() {
-                    var default_loc = {lat: 32.8800649, lng: -117.2362022};
-                    var map = new google.maps.Map(document.getElementById('map'), {
-                        center: default_loc,
-                        zoom: 10
-                    });
-                    var infoWindow = new google.maps.InfoWindow({map: map});
-
-                    console.log("Map initialized!");
-
-                    // Try HTML5 geolocation.
-                    if (navigator.geolocation) {
-                        navigator.geolocation.getCurrentPosition(function(position) {
-                            var pos = {
-                                lat: position.coords.latitude,
-                                lng: position.coords.longitude
-                            };
-
-                            infoWindow.setPosition(pos);
-                            infoWindow.setContent('Location found.');
-                            map.setCenter(pos);
-                        }, function() {
-                            handleLocationError(true, infoWindow, map.getCenter());
-                        });
-
-                        console.log("Location found!");
-                    }
-
-                    else {
-                        // Browser doesn't support Geolocation
-                        handleLocationError(false, infoWindow, map.getCenter());
-                    }
-
-                    /* creating markers */
-                    //32.8206185,-117.1726334 - Manna BBQ
-                    var loc1 = {lat: 32.8206185, lng: -117.1726334};
-                    var marker1 = new google.maps.Marker({
-                        position: loc1,
-                        map: map
-                    });
-
-                    //32.8205014,-117.1567012 - Grandma's Tofu
-                    /*var loc2 = {lat: 32.8206185, lng: -117.1726334};
-                    var marker2 = new google.maps.Marker({
-                        position: loc2,
-                        map: map
-                    });*/
-
-                    console.log("Markers initialized!");
-                }
-
-                function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-                    infoWindow.setPosition(pos);
-                    infoWindow.setContent(browserHasGeolocation ?
-                        'Error: The Geolocation service failed.' :
-                        'Error: Your browser doesn\'t support geolocation.');
-
-                    console.log("Geolocation failed!");
-                }
-                </script>
+            <div id="map_wrapper">
+                <div id="map_canvas" class="mapping"></div>
+            </div>
             </script>
             <div class="row spacer"></div>
         </div>
@@ -149,7 +85,7 @@
 	</div>
 
     <!-- GOOGLE MAP API SCRIPT -->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABZaEhz5AnijS8IZ8mYWYq-tQJ1dMTNxk&callback=initMap" type="text/javascript"></script>
+    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABZaEhz5AnijS8IZ8mYWYq-tQJ1dMTNxk&callback=initMap" type="text/javascript"></script> -->
 
 	<!-- SCRIPTS -->
 	<script src="/js/jquery-3.1.1.min.js"></script>
